@@ -11,6 +11,7 @@ __   __/ _ \|___  |___ /
 General:
  * Try to not fail when writing UTF po files with old Perl versions
    (GitHub's #495) [Ineiev].
+ * Improve various error messages to help users debugging encoding issues.
 
 Documentation:
  * Fix the doc of TransTractor::read() now that the refname is mandatory
